5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3161/executions/1712_2498.log
== SUBMITION (2019-05-13 15:47:06) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1

while(cna < cnb):
	cna = na + ((na * pa) / 100)
   cnb = nb + ((nb * pb) / 100)
	ct = ct + 1
	
print(ct)
	
-- EXECUTION TIME:
0.141802
-- ERROR:
  File "/home/codebench/codes/1712/2498/main.py", line 12
    cnb = nb + ((nb * pb) / 100)
                               ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:47:51) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1

while(cna < cnb):
	cna = cna + ((na * pa) / 100)
   cnb = cnb + ((nb * pb) / 100)
	ct = ct + 1
	
print(ct)
	
-- EXECUTION TIME:
0.163023
-- ERROR:
  File "/home/codebench/codes/1712/2498/main.py", line 12
    cnb = cnb + ((nb * pb) / 100)
                                ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:47:54) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1

while(cna < cnb):
	cna = cna + ((na * pa) / 100)
   cnb = cnb + ((nb * pb) / 100)
	ct = ct + 1
	
print(ct)
	
-- EXECUTION TIME:
0.19451
-- ERROR:
  File "/home/codebench/codes/1712/2498/main.py", line 12
    cnb = cnb + ((nb * pb) / 100)
                                ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:48:03) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1

while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
   cnb = cnb + ((cnb * pb) / 100)
	ct = ct + 1
	
print(ct)
	
-- EXECUTION TIME:
0.163897
-- ERROR:
  File "/home/codebench/codes/1712/2498/main.py", line 12
    cnb = cnb + ((cnb * pb) / 100)
                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:48:20) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1

while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
   cnb = cnb + ((cnb * pb) / 100)
	ct = ct + 1
	
print(ct)
	
-- EXECUTION TIME:
0.179019
-- ERROR:
  File "/home/codebench/codes/1712/2498/main.py", line 12
    cnb = cnb + ((cnb * pb) / 100)
                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:48:24) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1

while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
   cnb = cnb + ((cnb * pb) / 100)
	ct = ct + 1
	
print(ct)
	
-- ERROR:
File "XXXX", line 12
    cnb = cnb + ((cnb * pb) / 100)
                                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:48:44) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1

while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
   cnb = cnb + ((cnb * pb) / 100)
	ct = ct + 1
	
print(ct)
	
-- EXECUTION TIME:
0.15492
-- ERROR:
  File "/home/codebench/codes/1712/2498/main.py", line 12
    cnb = cnb + ((cnb * pb) / 100)
                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:51:36) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1

while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
   cnb = cnb + ((cnb * pb) / 100)
	ct = ct + 1
	
print(ct)
	
-- EXECUTION TIME:
0.143704
-- ERROR:
  File "/home/codebench/codes/1712/2498/main.py", line 12
    cnb = cnb + ((cnb * pb) / 100)
                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:58:52) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1

while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
   cnb = cnb + ((cnb * pb) / 100)
	ct = ct + 1
	
print(ct)
	
-- EXECUTION TIME:
0.199688
-- ERROR:
  File "/home/codebench/codes/1712/2498/main.py", line 12
    cnb = cnb + ((cnb * pb) / 100)
                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:59:47) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1

while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
   cnb = cnb + ((cnb * pb) / 100)
	ct = ct + 1
	
print(ct)
	
-- EXECUTION TIME:
0.192357
-- ERROR:
  File "/home/codebench/codes/1712/2498/main.py", line 12
    cnb = cnb + ((cnb * pb) / 100)
                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
